# agent

./: .env.example  DEMO.md  README.md  SPEC.md  pyproject.toml  ruff.toml
src/api/: app.py
src/cli/: __main__.py  view.py
src/providers/: exceptions.py  github.py  jira.py  openai.py
src/services/: __init__.py  data_aggregator.py  query_parser.py
src/settings/: __init__.py  settings.py
tests/: conftest.py  test_api.py  test_cli.py  test_data_aggregator.py  test_error_scenarios.py  test_github_provider.py  test_jira_provider.py  test_query_parser.py  test_response_generator.py
